<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Codepunk, LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!--
  ~ See https://jeroenmols.com/blog/2016/03/07/resourcenaming/ for ideas about resource naming
  -->

<resources>

    <!-- region Application -->

    <string name="app_account">Account</string>

    <string name="app_disabled">Disabled</string>

    <string name="app_enabled">Enabled</string>

    <string name="app_name">Codepunk</string>

    <string name="app_settings">Settings</string>

    <string name="app_got_it">Got it</string>

    <!-- endregion Application -->

    <!-- region Menus -->

    <string name="menu_settings_title">Settings</string>

    <!-- endregion Menus -->

    <!-- region Main -->

    <string name="main_log_in">Log In</string>

    <string name="main_logging_in">Logging In…</string>

    <string name="main_log_out">Log Out</string>

    <!-- endregion Main -->

    <!-- region Authenticator -->

    <!-- TODO Rename these to auth_ maybe? -->

    <string name="authenticator_token_type_default">Default</string>

    <string name="authenticator_token_type_unknown">Unknown</string>

    <string name="authenticator_username">Username</string>

    <string name="authenticator_email">Email</string>

    <string name="authenticator_family_name">Last name</string>

    <string name="authenticator_given_name">First name</string>

    <string name="authenticator_username_or_email">Username or email</string>

    <string name="authenticator_password">Password</string>

    <string name="authenticator_already_have_account">Already have an account?</string>

    <string name="authenticator_choose_account">Choose an account</string>

    <string name="authenticator_choose_account_colon">Choose an account:</string>

    <string name="authenticator_choose_account_below_colon">Or, choose an existing account below:</string>

    <string name="authenticator_confirm_password">Confirm password</string>

    <string name="authenticator_create">Sign up</string>

    <string name="authenticator_forgot_your_password">Forgot your password?</string>

    <string name="authenticator_inactive">You need to activate your account. We sent you an activation code when you registered. Please check your e-mail.</string>

    <string name="authenticator_log_in">Log in</string>

    <string name="authenticator_new_user">Don\'t have an account?</string>

    <string name="authenticator_forgot_password_instructions">Please provide the email address you specified during registration and we\'ll send you a password reset link.</string>

    <string name="authenticator_reset_password">Reset password</string>

    <string name="authenticator_send_again">Send again</string>

    <string name="authenticator_send_password_reset_link">Send password reset link</string>

    <string name="authenticator_sent_email">We sent you an activation code! Please check your e-mail.</string>

    <string name="authenticator_error_username_or_email">Enter a valid username or email</string>

    <string name="authenticator_error_password">Enter a valid password</string>

    <string name="authenticator_error_invalid_credentials">The username or password is incorrect.</string>

    <string name="authenticator_error_register">Unable to create a new account.</string>

    <!-- endregion Authenticator -->

    <!-- region Environments -->

    <string name="environment_development">Development</string>

    <string name="environment_local">Local</string>

    <string name="environment_production">Production</string>

    <!-- endregion Environments -->

    <!-- region Authentication -->

    <string name="authenticate_label_authenticating">Authenticating…</string>

    <string name="authenticate_label_register">Create account</string>

    <string name="authenticate_label_forgot_password">Forgot password</string>

    <string name="authenticate_label_log_in">Log in</string>

    <string name="authenticate_label_sign_in">Sign in to Codepunk</string>

    <!-- endregion Authentication -->

    <!-- region Settings -->

    <string name="settings_about_summary">Version %s</string>

    <string name="settings_developer_options_disable_dialog_message">All connections will be reset and the app will revert to the launch screen.</string>

    <string name="settings_developer_options_disable_dialog_title">Disable developer options?</string>

    <string name="settings_developer_options_incorrect_password">Incorrect password</string>

    <string name="settings_developer_options_password_dialog_message">Enter the password to enable developer options:</string>

    <string name="settings_developer_options_password_dialog_title">Developer password</string>

    <string name="settings_developer_options_password_hint">Password</string>

    <string name="settings_developer_options_now_a_developer">You are now a developer!</string>

    <string name="settings_developer_options_redundant_show_request">No need, developer options are already unlocked</string>

    <plurals name="settings_developer_options_steps_from_unlocking">
        <item quantity="one">You are now %d step away from unlocking developer options!</item>
        <item quantity="other">You are now %d steps away from unlocking developer options!</item>
    </plurals>

    <string name="settings_label_about">About</string>

    <string name="settings_label_developer_options">Developer options</string>

    <string name="settings_label_log_out">Log out</string>

    <string name="settings_label_main">Settings</string>

    <string name="settings_log_out_dialog_message">You will be logged out of %1$s.</string>

    <string name="settings_log_out_dialog_title">Are you sure?</string>

    <string name="settings_remote_environment_title">Remote environment</string>

    <!-- endregion Settings -->

    <!-- region Validation -->

    <string name="validation_input_name_confirm_password">The password confirmation</string>

    <string name="validation_input_name_email">The email</string>

    <string name="validation_input_name_family_name">The last name</string>

    <string name="validation_input_name_given_name">The first name</string>

    <string name="validation_input_name_password">The password</string>

    <string name="validation_input_name_username">The username</string>

    <string name="validation_input_name_username_or_email">The username or email</string>

    <!-- NOTE: These validation messages are configured to match those of Laravel. -->

    <string name="validation_invalid_pattern_email">%1$s must be a valid email address.</string>

    <string name="validation_invalid_pattern_word_character">%1$s may only contain alphanumeric characters and underscores.</string>

    <string name="validation_invalid_passwords_do_not_match">The password confirmation does not match.</string>

    <!-- endregion Validation -->

    <!-- region Alert Dialog messages (maybe move to Doofenschmirtz) -->

    <string name="alert_connect_exception_message">Unable to connect. Please check your connection and try again.</string>

    <string name="alert_connect_exception_title">Could not connect</string>

    <string name="alert_error">Error</string>

    <string name="alert_retry">Retry</string>

    <string name="alert_success">Success</string>

    <string name="alert_success_exclam">Success!</string>

    <string name="alert_timeout_exception_message">The connection timed out. Please try again later.</string>

    <string name="alert_unknown_error_message">An unknown error occurred.</string>

    <!-- endregion Alert Dialog messages (maybe move to Doofenschmirtz) -->

    <!-- region Temporary -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello">Hello!</string>
    <string name="hello_user">Hello, %1$s!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- endregion Temporary -->

</resources>
