<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Codepunk, LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/navigation_account"
            app:startDestination="@id/fragment_authenticate">

    <fragment
        android:id="@+id/fragment_authenticate"
        android:name="com.codepunk.core.presentation.auth.AuthenticateFragment"
        android:label="@string/authenticate_label_sign_in"
        tools:layout="@layout/fragment_authenticate">

        <action
            android:id="@+id/action_auth_to_register"
            app:destination="@id/fragment_register" />

        <action
            android:id="@+id/action_auth_to_log_in"
            app:destination="@id/fragment_log_in" />

    </fragment>

    <fragment
        android:id="@+id/fragment_register"
        android:name="com.codepunk.core.presentation.auth.RegisterFragment"
        android:label="@string/authenticate_label_register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_register_to_log_in"
            app:destination="@id/fragment_log_in" />

    </fragment>

    <fragment
        android:id="@+id/fragment_forgot_password"
        android:name="com.codepunk.core.presentation.auth.ForgotPasswordFragment"
        android:label="@string/authenticate_label_forgot_password"
        tools:layout="@layout/fragment_forgot_password" />

    <fragment
        android:id="@+id/fragment_log_in"
        android:name="com.codepunk.core.presentation.auth.LogInFragment"
        android:label="@string/authenticate_label_log_in"
        tools:layout="@layout/fragment_log_in">

        <action
            android:id="@+id/action_log_in_to_register"
            app:destination="@id/fragment_register" />

        <action
            android:id="@+id/action_log_in_to_forgot_password"
            app:destination="@id/fragment_forgot_password" />

    </fragment>

</navigation>
