<!--
  ~ Copyright (C) 2018 Codepunk, LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_horizontal"
            android:paddingLeft="@dimen/margin_horizontal"
            android:paddingTop="@dimen/margin_vertical"
            android:paddingEnd="@dimen/margin_horizontal"
            android:paddingRight="@dimen/margin_horizontal"
            android:paddingBottom="@dimen/margin_vertical"
            tools:context="com.codepunk.core.presentation.auth.RegisterFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:tag="username"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person_white_24dp"
                    android:drawableLeft="@drawable/ic_person_white_24dp"
                    android:drawablePadding="@dimen/size_small"
                    android:hint="@string/authenticator_username"
                    android:inputType="textVisiblePassword|textNoSuggestions"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_standard"
                android:tag="email"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_mail_white_24dp"
                    android:drawableLeft="@drawable/ic_mail_white_24dp"
                    android:drawablePadding="@dimen/size_small"
                    android:hint="@string/authenticator_email"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_standard"
                android:tag="password"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_white_24dp"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"
                    android:drawablePadding="@dimen/size_small"
                    android:hint="@string/authenticator_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_standard"
                android:tag="confirm_password"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_white_24dp"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"
                    android:drawablePadding="@dimen/size_small"
                    android:hint="@string/authenticator_confirm_password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/already_have_account_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_large"
                android:text="@string/authenticator_already_have_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_password_layout"/>

            <Space
                android:id="@+id/already_have_account_space"
                android:layout_width="@dimen/size_med_large"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/already_have_account_txt"
                app:layout_constraintEnd_toEndOf="@id/already_have_account_txt"
                app:layout_constraintTop_toTopOf="@id/already_have_account_txt"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_standard"
                android:background="?android:attr/selectableItemBackground"
                android:minHeight="48dp"
                android:padding="@dimen/size_standard"
                android:text="@string/authenticator_log_in"
                android:textAllCaps="false"
                app:layout_constraintBaseline_toBaselineOf="@id/already_have_account_txt"
                app:layout_constraintStart_toStartOf="@id/already_have_account_space"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
