<!--
  ~ Copyright (C) 2018 Codepunk, LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:paddingStart="@dimen/margin_horizontal"
        android:paddingLeft="@dimen/margin_horizontal"
        android:paddingTop="@dimen/margin_vertical"
        android:paddingEnd="@dimen/margin_horizontal"
        android:paddingRight="@dimen/margin_horizontal"
        android:paddingBottom="@dimen/margin_vertical"
        tools:context="com.codepunk.core.presentation.auth.AbsAuthenticateFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choose_account_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/authenticator_choose_account_colon"
            app:layout_constraintBottom_toTopOf="@+id/accounts_recycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed"/>

        <com.codepunk.core.lib.AutoHeightRecyclerView
            android:id="@+id/accounts_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_small"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/create_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_account_label"
            tools:itemCount="14"
            tools:listitem="@layout/item_account"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/authenticator_create"
            app:layout_constraintBottom_toTopOf="@id/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accounts_recycler"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/authenticator_log_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_btn"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
